--- a/index.css
+++ b/index.css
@@ -13,6 +13,12 @@ h6{
     color: gray;
     padding-bottom: 5px;
 }
+#dropdown-btn{
+    position: relative;
+    right: 30px;
+    top:7px;
+    cursor: pointer;
+}
 .master-card{
     display: none;
 }
@@ -60,6 +66,22 @@ h6{
     padding-top: 120px;
     padding-bottom: 30px;
 }
+#displayContent{
+    display: none;
+    position:relative;
+    color:black;
+    top:4px;
+    font-size: small;
+    font-style: italic;
+}
+#displayHolder{
+    display: none;
+    position:relative;
+    color:black;
+    top:4px;
+    font-size: small;
+    font-style: italic;
+}
 .card-number{
     display: flex;
     flex-direction: column;
@@ -100,7 +122,7 @@ h6{
     display: flex;
     flex-direction: column;
     position: relative;
-    bottom:25px;
+    bottom:20px;
     border-radius: 5px;
 }
 .mobile-view{
@@ -119,6 +141,19 @@ h6{
     body{
         background-color: rgb(83, 78, 78);
     }
+    #dropdown-btn{
+        position: relative;
+        right: 30px;
+        top:7px;
+        cursor: pointer;
+    }
+    .master-card{
+        display: none;
+    }
+    .american-card{
+        display: none;
+    }
+    
     h6{
         font-family:cursive;
         color: gray;
@@ -153,7 +188,7 @@ h6{
         display: flex;
         flex-direction: column;
         padding-right:15px;
-        padding-left: 15px;
+        padding-left:20px;
         gap: 30px;
         width:fit-content;
         margin: auto;
@@ -170,6 +205,7 @@ h6{
     }
     .card-number_box{
         display: flex;
+        gap:5px;
     }
     .card-number_box input{
         width: 80px;
@@ -196,11 +232,11 @@ h6{
         width: 80px;
         height: 30px;
     }
-    .cvv{
+    .cvv-mobile{
         display: flex;
         flex-direction: column;
         position: relative;
-        bottom:20px;
+        bottom:16px;
         right:30px;
     }
 }
