--- a/index.css
+++ b/index.css
@@ -50,7 +50,12 @@ h6{
     z-index: 1;
     top:30px;
 }
-
+.img-visa{
+    position: relative;
+     bottom: 30px;
+      width: 200px; 
+      filter:brightness(0) invert(1);
+}
 .input-background{
     background-color: white;
     display: flex;
@@ -92,7 +97,7 @@ h6{
     gap: 15px;
 }
 .card-number_box input{
-    width: 90px;
+    width: 89px;
     height: 40px;
     border-radius: 5px;
 }
@@ -170,7 +175,7 @@ h6{
         margin-top:50px;
     }
     .card-heading{
-        background-color: brown;
+        background-color:brown;
         width:350px;
         margin: auto;
         display: flex;
@@ -183,6 +188,7 @@ h6{
         z-index: 1;
         top:70px;
     }
+    
     #displayContentmobile{
         display: none;
         position:relative;
